--- a/app/src/main/res/layout/add_daily_items.xml
+++ b/app/src/main/res/layout/add_daily_items.xml
@@ -64,6 +64,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etInputAmount"
+                    android:inputType="number"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:padding="10dp"
